lib/stringify-extra/tests/ui/stringify_expr/bad_literal.rs
use stringify_extra::stringify_expr;

fn main() {
    stringify_expr!(tralse);
}
